<resources>
    <string name="app_name">Online Shop</string>
    <string name="bot_nav_home">Home</string>
    <string name="bot_nav_category">Category</string>
    <string name="bot_nav_search">Search</string>
    <string name="bot_nav_notification">Notification</string>
    <string name="bot_nav_user">User</string>
    <string name="tv_name">Name</string>
    <string name="dayCreateAcc">Day create account: %1$s</string>
    <string name="totalPrice">Total price: %1$d</string>
    <string name="tv_email_user">youremail@gmail.com</string>
    <string name="tb_user">Personal</string>
    <string name="tv_title_user_fragment">Personal</string>
    <string name="tv_order_management">Order management</string>
    <string name="tv_taken">Order has been received</string>
    <string name="tv_order_waiting">Order waiting for payment</string>
    <string name="wait_shipping">Orders are waiting for shipping</string>
    <string name="order_successful">Order successful</string>
    <string name="order_canceled">Order canceled</string>
    <string name="list_of_addresses">List of addresses</string>
    <string name="billing_information">Billing Information</string>
    <string name="products_purchased">Products purchased</string>
    <string name="viewd_products">Viewd products</string>
    <string name="status_1">The order has been received</string>
    <string name="status_2">Orders are being delivered</string>
    <string name="status_3">Orders have been shipped</string>
    <string name="status_4">Order canceled</string>
    <string name="change1">The order has been received -> Orders are being delivered</string>
    <string name="change2">Orders are being delivered -> Orders have been shipped</string>
    <string name="products_purchased_later">Products purchased later</string>
    <string name="mycomment">Mycomment</string>
    <string name="hot_line_1800_6963_free">Hot line: 0373865759</string>
    <string name="support">Support</string>
    <string name="sign_out">Sign out</string>
    <string name="update">Update</string>
    <string name="title_sign_in_sign_up">Sign in/Sign up</string>
    <string name="email_phone_number">Email/phone number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="name_sign_up">Name</string>
    <string name="dialogCancelOrder">Are you sure you want to cancel this order?</string>
    <string name="dialogOk">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogLogout">Are you sure you want to log out this account?</string>
    <string name="dialogSendMail">Password reset successfully, please check your email</string>
    <string name="dialogRegister">Account successfully created, please check your email to activate your account</string>
    <string name="dialogDelSlide">Are you sure you want to delete this ad?</string>
    <string name="dialogDelProduct">Are you sure you want to delete this product?</string>
    <string name="add_like_product">Added to favorite product list</string>
    <string name="rab_male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btnAddAcc">Add account</string>
    <string name="btnUpdateAcc">Update Account</string>
    <string name="show_password">Show</string>
    <string name="user_not_change">User information has not changed</string>
    <string name="user_change_success">User information has been updated</string>
    <string name="user_change_error_pw">Cannot change password</string>
    <string name="user_update_user_error">Update user information failed</string>
    <string name="create_acc_success">Successful account creation, please verify your email!</string>
    <string name="list_orders">List orders</string>
    <string name="my_vouchers">My vouchers</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="change_pasword">Change pasword</string>
    <string name="account_information">Account information</string>
    <string name="save_changes">Save changes</string>
    <string name="btnAdd">Add</string>
    <string name="you_have_no_orders_yet">You have no orders yet</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="product_name">Product name</string>
    <string name="order_code">Order code</string>
    <string name="status">Status</string>
    <string name="order_management">Order management</string>
    <string name="search_hint">Products, brands and everything you need</string>
    <string name="search_history">Search history</string>
    <string name="hot_keywords">Hot keywords</string>
    <string name="delete">Delete</string>
    <string name="welcome_to_tiki">Welcome to tiki</string>
    <string name="sign_in_sign_up">Sign in/Sign up</string>
    <string name="pass_word_reset">Reset Password</string>
    <string name="text_reset_pw">Please provide your email or phone number to retrieve your password</string>
    <string name="forgot_pasword">Forgot pasword</string>
    <string name="error_input_pw_not_entered">Please enter your password</string>
    <string name="error_input_pw_invalid">Invalid password</string>
    <string name="error_lgin_false">Your email or password is incorrect, please check again</string>
    <string name="error_input_pw_not_length">Password must be at least 6 characters, including letters and numbers, and
        not include spaces
    </string>
    <string name="error_new_pw_empty">New password is empty</string>
    <string name="error_new_pw_not_length">New password must be more than 6 characters, including letters and numbers
    </string>
    <string name="error_re_new_pw_empty">Retype new password is empty</string>
    <string name="error_passwords_do_not_match">New password do not match</string>
    <string name="error_old_passwords_incorrect">Old password is incorrect</string>
    <string name="day_create">Member from</string>
    <string name="error_load_category">Cannot load category</string>
    <string name="error_old_passwords_is_empty">Old password is empty</string>
    <string name="create_success_mesage">has successfully created an account, please check your email and verify your
        account
    </string>
    <string name="error_input_email_not_entered">Please enter your email</string>
    <string name="error_input_email_not_correct">Invalid email</string>
    <string name="error_input_email_exists">Email already exists</string>
    <string name="error_signup">Registration failed</string>
    <string name="error_input_email_not_exists">The email does not exist or is not registered</string>
    <string name="error_input_address_not_entered">Please enter your address</string>
    <string name="errCode">Please enter your code</string>
    <string name="err_product_name">Please enter product name</string>
    <string name="errPrice">Please enter price of product</string>
    <string name="errProCount">Please enter product count</string>
    <string name="errProInfo">Please enter product info</string>
    <string name="error_input_name_not_entered">Please enter your name</string>
    <string name="error_input_name_not_length">The name must be 1 character or more</string>
    <string name="error_input_phone_not_entered">Please enter your phone</string>
    <string name="error_input_phone_not_correct">Invalid phone number</string>
    <string name="verified_email_1">We have sent a confirmation email to</string>
    <string name="verified_email_2">Please confirm it to activate this account. If you do not complete this step, your
        account will not be created
    </string>
    <string name="btn_ok_verifi">OK</string>
    <string name="tx_cancel_btn_verfi">Cancel</string>
    <string name="phone_category">Smart phone - Tablet</string>
    <string name="_1_290_000">1.290.000 đ</string>
    <string name="list_product">List product</string>
    <string name="pulll_up_to_load_more">Pulll up to load more</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="view_more">View more</string>
    <string name="sale_percent">% sale</string>
    <string name="what_do_you_find_today">What do you find today?</string>
    <string name="saling_product">Saling product</string>
    <string name="check_verifire_mail">If you do not receive the email, please check that your email is valid</string>
    <string name="active_account">Active account</string>
    <string name="viewed_product">Viewed products</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="color">Color: </string>
    <string name="change">Change</string>
    <string name="comment_count">Comment count</string>
    <string name="out_of_product">Out of product</string>
    <string name="choose_to_buy">Choose to buy</string>
    <string name="product_details">Product details</string>
    <string name="customer_comment">Customer comment</string>
    <string name="_4_5_5" translatable="false">4.5/5</string>
    <string name="err_del_address">You cannot delete the default address</string>
    <string name="_100" translatable="false">100%</string>
    <string name="err_add_cart">Number of products is not enough, can not be added to the cart</string>
    <string name="errNoImage">You have not selected any images</string>
    <string name="nothingChange">No changes yet</string>
    <string name="content_of_product_detail">Content of product detail</string>
    <string name="make_a_comment">Make a comment</string>
    <string name="addSuccess">Successful</string>
    <string name="title_comment">Title comment</string>
    <string name="time_commnent">Time commnent</string>
    <string name="have_purchase" translatable="false">Have purchase</string>
    <string name="cmt_count">(1)</string>
    <string name="favorite_product">Favorite product</string>
    <string name="empty_list">The list is empty</string>
    <string name="best_seller">Best seller</string>
    <string name="all_product">All products</string>
    <string name="product_list_is_empty">Product list is empty</string>
    <string name="text_add_cart">This product has been added to the cart</string>
    <string name="view_cart">View cart</string>
    <string name="cart">Cart </string>
    <string name="amount">Amount: </string>
    <string name="continue_address">continue</string>
    <string name="add_address">Add address</string>
    <string name="receiver_s_address">Receiver\'s address</string>
    <string name="payments">Payments</string>
    <string name="payment_by_cash_on_delivery">Payment by cash on delivery</string>
    <string name="order_information">Order Information</string>
    <string name="the_provisional_amount">The provisional amount</string>
    <string name="transportation_fee">Transportation fee</string>
    <string name="order_id">Order ID:</string>
    <string name="order_date">Order date:</string>
    <string name="order_status">Order status:</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="please_touch_to_try_again">Please touch to try again</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="toggle_order_status">Toggle order status</string>
    <string name="please_enter_the_code_sent_to_your_email_to_confirm_the_order">Please enter the code sent to your email to confirm the order</string>
    <string name="your_code">Your code</string>
</resources>