<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/tvTitleMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_code_sent_to_your_email_to_confirm_the_order"
            android:textColor="@color/colorBlueDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleMail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_code"
                android:inputType="text"
                android:textColor="@color/colorBlueDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnConfirm"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/continue_address"
            app:layout_constraintEnd_toStartOf="@id/btnCancel"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField" />
        <Button
            android:id="@+id/btnCancel"
            style="@style/Button.CircleCorner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/cancel"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnConfirm"
            app:layout_constraintTop_toBottomOf="@id/textField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>