<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="order"
            type="com.thuypham.ptithcm.mytiki.data.Order" />

        <variable
            name="totalPrice"
            type="Long" />

        <variable
            name="tranFee"
            type="Long" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteBG"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/tv_tt_order_detail_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_id"
                        android:textColor="@color/colorTextHint"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_item_order_detail_ac_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@{order.id}"
                        android:textColor="@color/colorTextHint"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/tv_tt_order_detail_id"
                        app:layout_constraintTop_toTopOf="@id/tv_tt_order_detail_id"
                        tools:text="@string/order_id" />

                    <TextView
                        android:id="@+id/tv_tt_order_detail_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/order_date"
                        app:layout_constraintStart_toStartOf="@id/tv_tt_order_detail_date"
                        app:layout_constraintTop_toBottomOf="@id/tv_tt_order_detail_id" />

                    <TextView
                        android:id="@+id/tv_item_order_detail_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@{order.date}"
                        app:layout_constraintStart_toEndOf="@id/tv_tt_order_detail_date"
                        app:layout_constraintTop_toTopOf="@id/tv_tt_order_detail_date"
                        tools:text="@string/order_id" />

                    <TextView
                        android:id="@+id/tv_tt_order_detail_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/order_status"
                        app:layout_constraintStart_toStartOf="@id/tv_tt_order_detail_date"
                        app:layout_constraintTop_toBottomOf="@id/tv_tt_order_detail_date" />

                    <TextView
                        android:id="@+id/tv_item_order_detail_status"
                        txtStatusOrder="@{order.status}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/tv_tt_order_detail_status"
                        app:layout_constraintTop_toTopOf="@id/tv_tt_order_detail_status"
                        tools:text="@string/order_id" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/grayLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/receiver_s_address"
                    android:textColor="@color/colorTextHint"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name_address_order_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{order.name}"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp"
                    tools:text="@string/name_sign_up" />

                <TextView
                    android:id="@+id/tv_phone_order_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{order.phone}"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp"
                    tools:text="@string/phone" />

                <TextView
                    android:id="@+id/tv_address_order_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@{order.address}"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp"
                    tools:text="@string/add_address" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/grayLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/payments"
                    android:textColor="@color/colorTextHint"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/payment_by_cash_on_delivery"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/grayLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/order_information"
                    android:textColor="@color/colorTextHint"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_product_order_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhiteBG"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_product_confirm" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/grayLight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/the_provisional_amount"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_price_temp_order_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/_1_290_000"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/transportation_fee"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_price_shipping_order_detail"
                        txtPriceNoStrike="@{tranFee}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp"
                        tools:text="@string/_1_290_000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/amount"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_price_amount_order_detail"
                        txtPriceNoStrike="@{totalPrice+tranFee}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/colorRedError"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="@string/_1_290_000" />

                </LinearLayout>

                <Spinner
                    android:id="@+id/spOrderStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin" />

                <Button
                    android:id="@+id/btnChangeStatus"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="16dp"
                    android:linksClickable="true"
                    android:text="@string/toggle_order_status"
                    android:textColor="@android:color/white" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/grayLight" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>