<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/btn_back_user_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:linksClickable="true"
            android:onClick="onClickBackToUser"
            android:padding="16dp"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_left_arrow" />

        <TextView
            android:id="@+id/tv_name_toolbar_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/order_management"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_order_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/no_voucher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/empty_list"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_continue_shopping_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_btn_sign_in"
            android:text="@string/continue_shopping"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteBG"
        android:orientation="horizontal"
        tools:itemCount="3"
        tools:listitem="@layout/item_order" />


</LinearLayout>